# dbox

./: .gitignore  GITIGNORE_OPTIMIZATION.md  MANIFEST.in  PACKAGING_GUIDE.md  README.md  README_TESTS.md  output_to_zip.bat  pyproject.toml  pytest.ini  release.sh  release_to_laiye.bat  release_to_laiye.sh  requirements-test.txt  run_tests.bat  run_tests.sh  setup.py
.claude/: settings.local.json
dbox/: __init__.py  addressinfo.py  bankinfo.py  cache.py  db_oper.py  encrypt.py  feishu.py  file.py  flow.py  git.py  gitea.py  github.py  message.py  my_http.py  net.py  samba.py  testdata.py  time.py  utils.py  windows.py
tests/: conftest.py  test_all.py  test_cache.py  test_data_modules.py  test_db_oper.py  test_encrypt.py  test_file.py  test_flow.py  test_git.py  test_message.py  test_my_http.py  test_net.py  test_samba.py  test_testdata.py  test_time.py  test_utils.py
tests/resource/: config.json  ignore1.txt  ignore2.txt  version.txt
tests/resource/大量日志任务/: config.json  main.flowc
tests/resource/软件自动化-浏览器/: main.prj
